# dagster-compass-kit

./: ASSUMPTIONS.md  LICENSE  README.md  pyproject.toml
demo/: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml
demo/compass_demo/: definitions.py
examples/: asset_check.py  basic_resource.py  cascade_sensor.py  compass_sensor.py  daily_digest.yaml  failure_hook.py  issue_on_failure.py  retry_advisor.py  runbook_generator.py  structured_and_conversation.py
src/dagster_compass_kit/: __init__.py  cascade.py  checks.py  client.py  compass_client.py  hooks.py  issues.py  models.py  resource.py  retry.py  runbook.py  sensors.py  structured.py
src/dagster_compass_kit/components/: __init__.py  daily_digest.py
tests/: conftest.py  test_cascade.py  test_heuristic.py  test_issues.py  test_retry_parse.py  test_smoke.py  test_structured.py
