[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compass_demo"
version = "0.1.0"
description = "Minimal Dagster+ project demonstrating dagster-compass-kit."
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-compass-kit @ git+https://github.com/eric-thomas-dagster/dagster-compass-kit.git@main",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.dagster]
module_name = "compass_demo"
code_location_name = "compass_demo"
